fix(waybar): styling, spacing

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -50,5 +50,5 @@ window#waybar {
 #battery,
 #clock,
 #network {
-  padding: 0 10px;
+  padding: 0 5px;
 }
